Create docker-compose volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,6 @@ services:
       context: '.'
     container_name: frontend_experiment
     ports:
-        - 3000:3000
+      - 3000:3000
+    volumes:
+      - .:/opt/frontend_experiment
